# flutter_mfa_demo

./: readme.md
backend/mfa/: Cargo.toml
backend/mfa/src/: main.rs
backend/mfa/src/controllers/: match_code_controller.rs  mod.rs  one_click_controller.rs
backend/mfa/src/models/: mfa_code_request.rs  mfa_one_click_request.rs  mod.rs
backend/mfa/src/random_code_mfa/: algorithm.rs  mod.rs  tests.rs
backend/mfa/src/route/: mod.rs
backend/mfa/src/utils/: mod.rs  redis_utils.rs  tests.rs
frontend/mfa_demo/: README.md  pubspec.yaml
frontend/mfa_demo/android/app/: build.gradle
frontend/mfa_demo/ios/Runner/: Info.plist
frontend/mfa_demo/ios/Runner.xcodeproj/: project.pbxproj
frontend/mfa_demo/lib/: main.dart
frontend/mfa_demo/lib/one_click_mfa/: screen.dart
frontend/mfa_demo/lib/random_code_mfa/: algorithm.dart  algorithm_controller.dart  count_down.dart  note.dart  screen.dart
frontend/mfa_demo/lib/utils/: common.dart
frontend/mfa_demo/linux/: CMakeLists.txt  my_application.cc
frontend/mfa_demo/macos/Runner.xcodeproj/: project.pbxproj
frontend/mfa_demo/test/: test_algo.dart  test_algo_2.dart
frontend/mfa_demo/web/: index.html  manifest.json
frontend/mfa_demo/windows/: CMakeLists.txt
frontend/mfa_demo/windows/runner/: Runner.rc  main.cpp
frontend/target_web/: README.md  pubspec.yaml
frontend/target_web/lib/: code_login.dart  code_login_request.dart  main.dart  on_click_login_request.dart  one_click_login.dart
frontend/target_web/test/: widget_test.dart
frontend/target_web/windows/: CMakeLists.txt
(+7 files in other folders)
