[package]
name = "mfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
chrono = "0.4.23"
lazy_static = "1.4.0"
md5 = "0.7.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }